float_eq/tests/derive_tests/errors/ulps_missing.rs
use float_eq::FloatUlps;

#[derive(Debug, PartialEq, FloatUlps)]
struct MyComplex32 {
    re: f32,
    im: f32,
}

fn main() {}
